update basico, cadrado con triangulo

--- a/DAW1.html
+++ b/DAW1.html
@@ -19,6 +19,11 @@
     <div class="circulo"></div>
     <div class="triangle-up"></div>
 </div>
+    
+    
+<div class="cuadrado">
+    <div class="triangle-up"></div>
+</div>
 
 </body>
 
