--- a/DAW1.html
+++ b/DAW1.html
@@ -25,6 +25,10 @@
     <div class="triangle-up"></div>
 </div>
 
+<div class="cuadrado">
+    <div class="triangle-up"></div>
+</div>
+
 </body>
 
 
