--- a/DAW1.html
+++ b/DAW1.html
@@ -29,6 +29,11 @@
     <div class="triangle-up"></div>
 </div>
 
+<div class="cuadrado">
+    <div class="triangle-up"></div>
+    <p>Esto era unha proba</p>
+</div>
+
 </body>
 
 
