--- a/AJAX_lectura_json.html
+++ b/AJAX_lectura_json.html
@@ -25,7 +25,7 @@ th,td {
 function loadDoc() {
   var xhttp = new XMLHttpRequest();
 
-  xhttp.open("GET", "json_superheroes.json", true);
+  xhttp.open("GET", "JSONs/data.json", true);
   xhttp.send();
 
   xhttp.onreadystatechange = function() {
