--- a/AJAX_lectura_json.html
+++ b/AJAX_lectura_json.html
@@ -33,8 +33,8 @@ function loadDoc() {
      const myObj = JSON.parse(this.responseText);
   let text = "<table border='1'>";
   text += "<tr><th>NOME</th><th>PUNTOS</th></tr>";
-  for (let x in myObj.equipos) {
-     text += "<tr><td>" + myObj.equipos[x].nome + "</td><td>"  + myObj.equipos[x].puntos + "</td></tr>";
+  for (i=0; i < myObj.length; i++) {
+     text += "<tr><td>" + myObj[i].nome + "</td><td>"  + myObj[i].puntos + "</td></tr>";
    };
   text += "</table>";  
   document.getElementById("demo").innerHTML = text;
