--- a/AJAX_lectura_json.html
+++ b/AJAX_lectura_json.html
@@ -21,8 +21,8 @@ th,td {
 <table id="demo"></table>
 
 <script>
-const p = document.getElementById("body"); // Encuentra el elemento de párrafo en la página a través de su id "foo"
-  p.onreadystatechange = loadDoc; // Agrega la función onclick al elemento
+let cuerpoDelDocumento = document.body;
+cuerpoDelDocumento.onload = miFuncion;
 function loadDoc() {
   var xhttp = new XMLHttpRequest();
 
