--- a/AJAX_lectura_json.html
+++ b/AJAX_lectura_json.html
@@ -22,7 +22,7 @@ th,td {
 
 <script>
 let cuerpoDelDocumento = document.body;
-cuerpoDelDocumento.onload = miFuncion;
+cuerpoDelDocumento.onload = loadDoc;
 function loadDoc() {
   var xhttp = new XMLHttpRequest();
 
