--- a/AJAX_lectura_json.html
+++ b/AJAX_lectura_json.html
@@ -21,7 +21,7 @@ th,td {
 <table id="demo"></table>
 
 <script>
-let cuerpoDelDocumento = document.body;
+const cuerpoDelDocumento = document.body;
 cuerpoDelDocumento.onload = loadDoc;
 function loadDoc() {
   var xhttp = new XMLHttpRequest();
